--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
   "scripts": {
     "start": "npm run lite",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server",
     "scss": "node-sass -o css/ css/",
     "watch:scss": "onchange 'css/*.scss' -- npm run scss",
     "watch:all": "parallelshell 'npm run watch:scss' 'npm run lite'",
-    "clean": "rimraf dist",
-    "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
-    "imagemin": "imagemin img/* -o dist/img",
-    "usemin": "usemin contactus.html -d dist --htmlmin -o dist/contactus.html && usemin aboutus.html -d dist --htmlmin -o dist/aboutus.html && usemin index.html -d dist --htmlmin -o dist/index.html",
+    "clean": "rimraf build",
+    "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* build/fonts",
+    "imagemin": "imagemin img/* -o build/img",
+    "usemin": "usemin contactus.html -d build --htmlmin -o build/contactus.html && usemin aboutus.html -d build --htmlmin -o build/aboutus.html && usemin index.html -d build --htmlmin -o build/index.html",
     "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin"
   },
   "keywords": [],
